--- a/about/index.html
+++ b/about/index.html
@@ -315,7 +315,7 @@ macouen@gmail.com">
     
     
       <p><blockquote class="blockquote-center">Don’t be afraid of change, you may lose out on something good, but you might gain something even better.This is life.
-	  机场推荐： https://justmysocks.net/members/aff.php?aff=1735 
+	   <br>机场推荐： https://justmysocks.net/members/aff.php?aff=1735 <br>
 	  <br></blockquote><br><br></p>
 <h1 id="About_me">About me</h1><blockquote>
 <h3 id="男，26，Android开发工程师。">男，26，Android开发工程师。</h3></blockquote>
